had to change all images height/width css because safari was stretching my images. a bug that was not present in my development since I have been using google chrome.

--- a/blog/static/blog/css/category_page.css
+++ b/blog/static/blog/css/category_page.css
@@ -19,7 +19,7 @@
 
 #main-block-image {
 	width: 100%;
-	height: auto;
+	height: 100%;
 	padding-top: 3rem;
 	padding-bottom: 0.75rem;
 }
