--- a/blog/static/blog/css/homepage.css
+++ b/blog/static/blog/css/homepage.css
@@ -29,7 +29,7 @@
 
 #main-block-image {
 	width: 100%;
-	height: auto;
+	height: 100%;
 	padding-bottom: 0.75rem;
 }
 
