--- a/blog/static/blog/css/post_detail.css
+++ b/blog/static/blog/css/post_detail.css
@@ -23,7 +23,7 @@
 }
 #main-block-image {
 	width: 100%;
-	height: auto;
+	height: 100%;
 }
 
 
