--- a/blog/static/blog/css/subscribe_thank_you.css
+++ b/blog/static/blog/css/subscribe_thank_you.css
@@ -6,7 +6,7 @@
 
 #image-postit {
 	width: 100%;
-	height: auto;
+	height: 100%;
 }
 
 .main-block-text p {
